cleanup and fixing column spacing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -151,4 +151,11 @@
 			line-height: 1.65em;
 		}
 	}
+
+	@media screen and (min-width: 768px) {
+		.table-data-wrap {
+			padding-left: 25px;
+			padding-right: 25px;
+		}
+	}
 }
